--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ html, body {
     color: var(--black-text)
 }
 
+.section {
+    margin: 70px 0;
+}
+
+
 /*NAV*/
 
 .nav {
@@ -157,3 +162,36 @@ html, body {
     top: 1px;
 }
 
+/*PROJECTS*/
+
+.title-1 {
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 1.3;
+    color: var(--accent);
+    text-align: center;
+    margin-bottom: 60px;
+}
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 30px;
+    justify-content: center;
+}
+.project {
+    border-radius: 10px;
+    box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+    max-width: 370px;
+}
+.project__img {
+    border-radius: 10px;
+
+}
+.project__title {
+    line-height: 1.3;
+    font-size: 24px;
+    font-weight: 700;
+    padding: 15px 20px 25px;
+    color: var(--black-text);
+}
