--- a/style.css
+++ b/style.css
@@ -199,6 +199,54 @@ html, body {
     color: var(--black-text);
 }
 
+/* PROJECT DETAILS */
+
+.project-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    margin: 0 auto;
+    max-width: 865px;
+}
+.project-details__cover {
+    max-width: 100%;
+    box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.project-details__description {
+    margin: 40px 0 30px;
+    font-weight: 700;
+    font-size: 24px;
+    letter-spacing: -0.5px;
+    line-height: 1.3;
+}
+.btn-outline {
+    height: 48px;
+    padding: 12px 20px;
+    color: var(--black);
+
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+
+    border: 1px solid var(--black);
+    border-radius: 5px;
+
+    transition: opacity 0.2s ease-in;
+
+}
+
+.btn-outline:hover {
+    opacity: 0.8;
+}
+
+.btn-outline:active {
+    position: relative;
+    top: 1px;
+}
+
 /*FOOTER*/
 
 .footer {
