--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ html, body {
 .none {
     display: none !important;
 }
+.title-2 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 1.3;
+    margin-bottom: 20px;
+}
 
 /*NAV*/
 
@@ -247,7 +253,24 @@ html, body {
     top: 1px;
 }
 
-/*FOOTER*/
+/* SKILLS */
+
+.content-list {
+    margin: 0 auto;
+    max-width: 570px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    row-gap: 40px;
+}
+.content-list__item {
+    font-size: 18px;
+    line-height: 1.5;
+
+}
+
+/* FOOTER */
 
 .footer {
     background-color: var(--dark-bg);
@@ -278,3 +301,4 @@ html, body {
 .copyright p + p {
     margin-bottom: 0.5em;
 }
+
