--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ html, body {
     font-family: Poppins, sans-serif;
     font-weight: 500;
     font-size: 16px;
+    flex-wrap: wrap;
+    row-gap: 10px;
 }
 
 .nav-list__link {
@@ -99,6 +101,44 @@ html, body {
     height: 2px;
     width: 100%;
     background-color: var(--accent);
+}
+
+.dark-mode-btn {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 5px;
+    width: 51px;
+    height: 26px;
+
+    background-color: #272727;
+    border-radius: 50px;
+
+    position: relative;
+}
+.dark-mode-btn__icon {
+    position: relative;
+    z-index: 9;
+}
+
+.dark-mode-btn::before {
+    content: "";
+
+    position: absolute;
+    top: 1px;
+    left: 1px;
+
+    display: block;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: var(--white);
+
+    transition: left 0.2s ease-in;
+}
+
+.dark-mode-btn--active::before {
+    left: 26px;
 }
 
 /*HEADER*/
@@ -127,7 +167,6 @@ html, body {
 .header-title {
     margin-bottom: 20px;
     font-size: 40px;
-    line-height: 1,4;
 }
 
 .header-title strong {
@@ -307,3 +346,75 @@ html, body {
     margin-bottom: 0.5em;
 }
 
+
+/* ADAPTATION */
+
+    @media (max-width: 320px) {
+        .header-title strong {
+            font-size: 40px;
+        }   
+        
+        .header-title {
+            font-size: 20px;  
+            margin-bottom: 10px;  
+        }
+
+        .header-text {
+            font-size: 15px;
+            margin-bottom: 30px;
+        }
+    }
+
+@media (max-width: 620px) {
+    .header {
+        min-height: unset;
+    }
+
+    .header__title {
+        font-size: 30px;
+    }
+
+    .header__title strong {
+        font-size: 40px;
+    }
+
+    .section {
+        margin: 40px 0;
+    }
+
+    .project__title {
+        font-size: 22px;
+    }
+
+    .project-details__description { 
+        font-size: 22px;
+        margin: 40px 0 15px;
+    }
+
+    .title-1 {
+        margin-bottom: 30px;
+        font-size: 40px;
+    }
+
+    .title-2 {
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
+
+    .footer {
+        padding: 40px 0 30px;
+    }
+
+    .footer__wrapper {
+        row-gap: 20px;
+    }
+
+    .social {
+        column-gap: 20px;
+    }
+
+    .social__item {
+        width: 28px;
+    }
+
+}
