--- a/style.css
+++ b/style.css
@@ -17,17 +17,32 @@ font-family: 'Poppins', sans-serif;
     --white: #fff;
     --purple: #5C62EC;
 
-    --dark-bg: var(--black);
     --dark-border: var(--black-border);
-    --header-text: var(--white);
     --accent: var(--purple);
     --black-text: var(--black);
+    --dark-bg: var(--black);
+    --header-text: var(--white);
+
+    /* LIGHT MODE */
+
+    --page-bg: #ffffff;
+    --text-color: var(--black);
+    --box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
+}
+
+.dark-mode {
+
+    /* DARK MODE */
+    --page-bg: #252526;
+    --text-color: var(--white);
+    --box-shadow: 0 5px 35px rgba(0, 0, 0, 0.8);
 }
 
 html, body {
     font-family: 'DM Sans', sans-serif;
     letter-spacing: -0.5px;
-    color: var(--black-text);
+    color: var(--text-color);
+    background-color: var(--page-bg);
     
 }
 
@@ -75,7 +90,7 @@ html, body {
 
 .nav-list {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     column-gap: 40px;
     font-family: Poppins, sans-serif;
     font-weight: 500;
@@ -106,6 +121,7 @@ html, body {
 .dark-mode-btn {
     display: flex;
     justify-content: space-between;
+    order: 1;
 
     padding: 5px;
     width: 51px;
@@ -230,7 +246,7 @@ html, body {
 }
 .project {
     border-radius: 10px;
-    box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--box-shadow);
     max-width: 370px;
 }
 .project__img {
@@ -242,7 +258,7 @@ html, body {
     font-size: 24px;
     font-weight: 700;
     padding: 15px 20px 25px;
-    color: var(--black-text);
+    color: var(--text-color);
 }
 
 /* PROJECT DETAILS */
@@ -258,8 +274,8 @@ html, body {
 }
 .project-details__cover {
     max-width: 100%;
-    box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
 }
 .project-details__description {
     margin: 40px 0 30px;
@@ -267,11 +283,14 @@ html, body {
     font-size: 24px;
     letter-spacing: -0.5px;
     line-height: 1.3;
+
+    color: var(--text-color);
 }
 .btn-outline {
     height: 48px;
     padding: 12px 20px;
     color: var(--black);
+    background-color: #fff;
 
     display: flex;
     column-gap: 10px;
@@ -376,6 +395,14 @@ html, body {
 
     .header__title strong {
         font-size: 40px;
+    }
+
+    .nav-list {
+        justify-content: space-between;
+    }
+
+    .dark-mode-btn {
+        order: 0;
     }
 
     .section {
